--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     }
     div.profile-content {
       padding-bottom: 20px;
-      width: 300px;
+      width: 350px;
       display: flex;
       align-items: center;
       flex-direction: column;
@@ -42,16 +42,16 @@
       background-repeat: no-repeat;
       background-size: cover;
       width: 100%;
-      height: 120px;
+      height: 150px;
       border-radius: 10px 10px 0 0;
       position: relative;
     }
     div.profile-content .container img {
       position: absolute;
       left: 50%;
-      bottom: -40px;
+      bottom: -50px;
       transform: translateX(-50%);
-      width: 80px;
+      width: 100px;
       border: 4px solid white;
       border-radius: 50%;
     }
@@ -63,12 +63,12 @@
     }
     div.profile-content .info-user h4 {
       font-size: 18px;
-      margin: 50px 0px 5px;
+      margin: 60px 0px 5px;
       color: var(--Very-dark-desaturated-blue);
     }
     div.profile-content .info-user .age {
       color: var(--Dark-grayish-blue);
-      margin-top: 45px;
+      margin-top: 55px;
       margin-left: -15px;
     }
     div.profile-content .info-user .city {
@@ -76,6 +76,7 @@
       display: block;
       width: 100%;
       text-align: center;
+      font-size: 15px;
     }
     div.profile-content .numbers {
       width: 100%;
@@ -88,12 +89,13 @@
       content: "";
       position: absolute;
       width: 100%;
-      height: 0.5px;
-      top: 20px;
+      height: 1px;
+      top: 25px;
       background-color: var(--Dark-gray);
     }
     div.profile-content .numbers .stats {
       text-align: center;
+      margin-top: 15px;
     }
     div.profile-content .numbers .stats h5 {
       margin-bottom: 5px;
